[gd_scene load_steps=21 format=2]

[ext_resource path="res://script/Player.gd" type="Script" id=1]
[ext_resource path="res://objects/tscn/tree_detailed.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/ObjectSpawner.gd" type="Script" id=3]
[ext_resource path="res://font/Poppins-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://script/Main.gd" type="Script" id=5]
[ext_resource path="res://objects/tscn/fence.tscn" type="PackedScene" id=6]
[ext_resource path="res://sound/ocean.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/crash.wav" type="AudioStream" id=8]
[ext_resource path="res://water/Water.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/tscn/Floating Object.tscn" type="PackedScene" id=10]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.52549, 0.705882, 0.537255, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="SphereMesh" id=7]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.764706, 0.192157, 0.192157, 1 )

[sub_resource type="SphereShape" id=8]

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="BoxShape" id=12]

[node name="Main" type="Spatial"]
script = ExtResource( 5 )

[node name="Ground" type="StaticBody" parent="."]
collision_layer = 4
collision_mask = 3

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 30, 0, 0, 0, 0.5, 0, 0, 0, 3, 0, 0, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 30, 0, 0, 0, 0.5, 0, 0, 0, 3, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Player" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
collision_mask = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Player"]
transform = Transform( 1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, 0 )
shape = SubResource( 8 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.996195, 0.0871558, 0, -0.0871558, 0.996195, 0, 5, 30 )

[node name="tree_detailed" parent="." instance=ExtResource( 2 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -28, 0.5, 0 )

[node name="ObjectSpawner" type="Spatial" parent="."]

[node name="Timer" type="Timer" parent="ObjectSpawner"]
script = ExtResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.626375, -0.727205, -0.280762, 0.230423, -0.17135, 0.957885, -0.744688, -0.664689, 0.0602359, 1.92117, 9.33561, 9.69578 )
shadow_enabled = true

[node name="Button" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartGame" type="Button" parent="Button"]
pause_mode = 2
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = -150.0
margin_right = 300.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button/RestartGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -25.5
margin_right = 120.0
margin_bottom = 25.5
custom_fonts/font = SubResource( 10 )
text = "Game Over!
Tap to restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScore" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScore" type="Label" parent="BestScore"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_right = -20.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 11 )
text = "Best Score: "
align = 2
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = 30.0
margin_right = 70.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fence" type="Spatial" parent="."]

[node name="Right" type="Node2D" parent="Fence"]

[node name="fence" parent="Fence/Right" instance=ExtResource( 6 )]

[node name="fence2" parent="Fence/Right" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 4.5, 0.8, 0 )

[node name="fence3" parent="Fence/Right" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 9, 0.8, 0 )

[node name="fence4" parent="Fence/Right" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 13.5, 0.8, 0 )

[node name="fence5" parent="Fence/Right" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 18, 0.8, 0 )

[node name="fence6" parent="Fence/Right" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 22.5, 0.8, 0 )

[node name="fence7" parent="Fence/Right" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 27, 0.8, 0 )

[node name="Left" type="Node2D" parent="Fence"]

[node name="fence8" parent="Fence/Left" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -4.5, 0.8, 0 )

[node name="fence9" parent="Fence/Left" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -9, 0.8, 0 )

[node name="fence10" parent="Fence/Left" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -13.5, 0.8, 0 )

[node name="fence11" parent="Fence/Left" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -18, 0.8, 0 )

[node name="fence12" parent="Fence/Left" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -22.5, 0.8, 0 )

[node name="fence13" parent="Fence/Left" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -27, 0.8, 0 )

[node name="OceanSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="CrashSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )

[node name="Water" parent="." instance=ExtResource( 9 )]

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 100, 0, 0, 0, 0.5, 0, 0, 0, 10, 0, 0, 0 )
shape = SubResource( 12 )

[node name="Floating Object" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.86747, 0, -0.497489, 0, 1, 0, 0.497489, 0, 0.86747, 16.8907, -0.3, 11 )

[node name="Floating Object2" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.986176, 0, -0.165702, 0, 1, 0, 0.165702, 0, 0.986176, -21.7591, -0.3, 7.5777 )

[node name="Floating Object3" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.709509, 0, 0.704696, 0, 1, 0, -0.704696, 0, 0.709509, 5.95933, -0.3, 7.39103 )

[connection signal="pressed" from="Button/RestartGame" to="." method="_on_RestartGame_pressed"]
[connection signal="body_entered" from="Area" to="Player" method="_on_Area_body_entered"]
